// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-jUwIko ebCFIc"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-jUwIko klNCMh"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-jUwIko jHxvMj"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-jUwIko cNAEAB"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-jUwIko bZLUO"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-jUwIko mvtUN"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-jUwIko ebCFIc"
  >
    Span tag
  </span>,
  <label
    className="sc-jUwIko ebCFIc"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-jUwIko fvnkJD"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-jUwIko eJiXYj"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-jUwIko binAHz"
  >
    Centered Text
  </p>,
  <p
    className="sc-jUwIko inpLzc"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-jUwIko buCXEN"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-jUwIko ebCFIc"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-jUwIko eXNErD"
  >
    Uppercase Text
  </p>,
]
`;
